[gd_scene load_steps=64 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h3.theme" type="Theme" id=1]
[ext_resource path="res://src/main/puzzle/tutorial/TutorialHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/menu/theme/h3-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/main/puzzle/metaball.shader" type="Shader" id=4]
[ext_resource path="res://src/main/puzzle/puzzle-trace.gd" type="Script" id=5]
[ext_resource path="res://src/main/puzzle/ResultsHud.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/puzzle/rainbow-metaball.shader" type="Shader" id=7]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/puzzle/piece/PieceManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/puzzle/PuzzleTouchButtons.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/main/ui/applause.wav" type="AudioStream" id=11]
[ext_resource path="res://src/main/puzzle/wall-frosting-sfx.gd" type="Script" id=12]
[ext_resource path="res://src/main/ui/menu/theme/h2-font.tres" type="DynamicFont" id=13]
[ext_resource path="res://src/main/ui/menu/theme/h4-font.tres" type="DynamicFont" id=14]
[ext_resource path="res://src/main/puzzle/texture-metaball.shader" type="Shader" id=15]
[ext_resource path="res://src/main/puzzle/wall-glob-viewports.gd" type="Script" id=16]
[ext_resource path="res://src/main/puzzle/FrostingViewports.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/main/puzzle/star-seeds.gd" type="Script" id=18]
[ext_resource path="res://src/main/puzzle/puzzle-music-manager.gd" type="Script" id=19]
[ext_resource path="res://src/main/puzzle/food-items.gd" type="Script" id=20]
[ext_resource path="res://src/main/puzzle/puzzle.gd" type="Script" id=21]
[ext_resource path="res://src/main/viewport-outline-material.tres" type="Material" id=22]
[ext_resource path="res://src/main/puzzle/milestone-hud.gd" type="Script" id=23]
[ext_resource path="res://src/main/puzzle/frosting-globs.gd" type="Script" id=24]
[ext_resource path="res://src/main/puzzle/topout-tracker.gd" type="Script" id=30]
[ext_resource path="res://src/main/ui/font-fit-label.gd" type="Script" id=36]
[ext_resource path="res://assets/main/ui/go.wav" type="AudioStream" id=38]
[ext_resource path="res://assets/main/ui/ready.wav" type="AudioStream" id=39]
[ext_resource path="res://assets/main/puzzle/wood-backdrop.png" type="Texture" id=40]
[ext_resource path="res://assets/main/puzzle/playfield-walls.png" type="Texture" id=41]
[ext_resource path="res://assets/main/puzzle/chalkboard.png" type="Texture" id=42]
[ext_resource path="res://assets/main/world/chef/gameover-voice4.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/main/world/chef/gameover-voice3.wav" type="AudioStream" id=45]
[ext_resource path="res://assets/main/world/chef/gameover-voice0.wav" type="AudioStream" id=46]
[ext_resource path="res://assets/main/ui/gameover.wav" type="AudioStream" id=47]
[ext_resource path="res://assets/main/world/chef/gameover-voice2.wav" type="AudioStream" id=48]
[ext_resource path="res://assets/main/ui/excellent.wav" type="AudioStream" id=51]
[ext_resource path="res://assets/main/ui/matchend.wav" type="AudioStream" id=52]
[ext_resource path="res://assets/main/world/chef/go-voice0.wav" type="AudioStream" id=53]
[ext_resource path="res://assets/main/world/chef/go-voice1.wav" type="AudioStream" id=54]
[ext_resource path="res://assets/main/world/chef/go-voice2.wav" type="AudioStream" id=55]
[ext_resource path="res://assets/main/world/chef/gameover-voice1.wav" type="AudioStream" id=57]
[ext_resource path="res://src/main/puzzle/Score.tscn" type="PackedScene" id=61]
[ext_resource path="res://src/main/puzzle/PuzzleMessages.tscn" type="PackedScene" id=62]
[ext_resource path="res://src/main/world/restaurant/CreatureView.tscn" type="PackedScene" id=63]
[ext_resource path="res://src/main/puzzle/piece/NextPieceDisplays.tscn" type="PackedScene" id=64]
[ext_resource path="res://src/main/puzzle/Playfield.tscn" type="PackedScene" id=65]
[ext_resource path="res://src/main/puzzle/chalkboard.gd" type="Script" id=66]
[ext_resource path="res://src/main/puzzle/start-end-sfx.gd" type="Script" id=67]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("WallGlobViewports/Viewport")

[sub_resource type="OpenSimplexNoise" id=2]
resource_local_to_scene = true
seed = -529000524
octaves = 1

[sub_resource type="NoiseTexture" id=3]
width = 1024
height = 1024
seamless = true
noise = SubResource( 2 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("WallGlobViewports/RainbowViewport")

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/frosting_texture_offset = Vector2( 356, -10 )
shader_param/frosting_alpha = 0.6
shader_param/noise = SubResource( 3 )
shader_param/frosting_texture = SubResource( 1 )
shader_param/rainbow_texture = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=7]
flags = 5
viewport_path = NodePath("FrostingGlobs/GlobViewports/Viewport")

[sub_resource type="OpenSimplexNoise" id=8]
resource_local_to_scene = true
seed = -165480819
octaves = 1

[sub_resource type="NoiseTexture" id=9]
width = 1024
height = 1024
seamless = true
noise = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 7 )
shader_param/noise = SubResource( 9 )

[sub_resource type="ViewportTexture" id=11]
flags = 5
viewport_path = NodePath("FrostingGlobs/GlobViewports/RainbowViewport")

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("FoodItems/Viewport")

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 0.333333 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[node name="Puzzle" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wood" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
texture = ExtResource( 40 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playfield Shadow" type="Polygon2D" parent="."]
position = Vector2( 678.385, -289.115 )
color = Color( 0.345098, 0.14902, 0.0705882, 1 )
antialiased = true
polygon = PoolVector2Array( -320.131, 310.11, -314.356, 304.092, 85.5861, 304.079, 86.6343, 305.127, 86.6118, 861.112, 80.5082, 867.028, -320.243, 866.99 )

[node name="Playfield" parent="." instance=ExtResource( 65 )]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0

[node name="StarSeeds" type="Control" parent="."]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
_puzzle_tile_map_path = NodePath("../Playfield/TileMapClip/TileMap")

[node name="PieceManager" parent="." instance=ExtResource( 9 )]
playfield_path = NodePath("../Playfield")
next_piece_displays_path = NodePath("../NextPieceDisplays")

[node name="NextPieceDisplays" parent="." instance=ExtResource( 64 )]
margin_left = 688.0
margin_top = 28.0
margin_right = 752.0
margin_bottom = 572.0

[node name="FrostingSfx" type="Node" parent="."]
script = ExtResource( 12 )

[node name="SplatPlayer0" type="AudioStreamPlayer" parent="FrostingSfx"]
bus = "Sound Bus"

[node name="SplatPlayer1" type="AudioStreamPlayer" parent="FrostingSfx"]
bus = "Sound Bus"

[node name="SplatPlayer2" type="AudioStreamPlayer" parent="FrostingSfx"]
bus = "Sound Bus"

[node name="WallGlobViewports" parent="." instance=ExtResource( 17 )]
margin_left = 356.5
margin_top = 20.5
margin_right = 758.5
margin_bottom = 576.5
script = ExtResource( 16 )
glob_min_scale = 1.2
glob_max_scale = 2.5

[node name="Walls" type="TextureRect" parent="."]
material = SubResource( 5 )
margin_left = 356.5
margin_top = 20.5
margin_right = 758.5
margin_bottom = 578.5
texture = ExtResource( 41 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrostingGlobs" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 24 )
puzzle_tile_map_path = NodePath("../Playfield/TileMapClip/TileMap")
playfield_path = NodePath("../Playfield")
next_piece_displays_path = NodePath("../NextPieceDisplays")

[node name="GlobViewports" type="Node" parent="FrostingGlobs"]

[node name="Viewport" type="Viewport" parent="FrostingGlobs/GlobViewports"]
size = Vector2( 1024, 600 )
transparent_bg = true

[node name="RainbowViewport" type="Viewport" parent="FrostingGlobs/GlobViewports"]
size = Vector2( 1024, 600 )
transparent_bg = true

[node name="TextureRect" type="TextureRect" parent="FrostingGlobs"]
modulate = Color( 1, 1, 1, 0.768627 )
material = SubResource( 6 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = SubResource( 7 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainbowTextureRect" type="TextureRect" parent="FrostingGlobs"]
material = SubResource( 10 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = SubResource( 11 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodItems" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 20 )
playfield_path = NodePath("../Playfield")

[node name="Viewport" type="Viewport" parent="FoodItems"]
size = Vector2( 1024, 600 )
transparent_bg = true

[node name="TextureRect" type="TextureRect" parent="FoodItems"]
material = ExtResource( 22 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = SubResource( 12 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatureView" parent="." instance=ExtResource( 63 )]
position = Vector2( 27.9925, 314.726 )
scale = Vector2( 0.5, 0.5 )

[node name="Hud" type="CanvasLayer" parent="."]

[node name="HudUi" type="Control" parent="Hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chalkboard" type="TextureRect" parent="Hud/HudUi"]
margin_left = -58.0
margin_top = 27.0
margin_right = 284.0
margin_bottom = 292.0
texture = ExtResource( 42 )
expand = true
script = ExtResource( 66 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chalkboard Shadow" type="Polygon2D" parent="Hud/HudUi/Chalkboard"]
show_behind_parent = true
position = Vector2( 57.4473, -143.371 )
scale = Vector2( 0.444724, 0.444458 )
color = Color( 0.345098, 0.14902, 0.0705882, 1 )
antialiased = true
polygon = PoolVector2Array( -129.116, 322.644, -115.686, 309.085, 653.374, 309.084, 653.35, 905.357, 639.906, 918.809, -129.063, 918.761 )

[node name="Score" parent="Hud/HudUi/Chalkboard" instance=ExtResource( 61 )]
margin_left = 58.0
margin_top = 25.0
margin_right = 308.0
margin_bottom = 85.0

[node name="MilestoneHud" type="Control" parent="Hud/HudUi/Chalkboard"]
margin_left = 58.0
margin_top = 153.0
margin_right = 308.0
margin_bottom = 233.0
rect_min_size = Vector2( 250, 40 )
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Hud/HudUi/Chalkboard/MilestoneHud"]
margin_left = 150.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 75.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
percent_visible = false

[node name="Desc" type="Label" parent="Hud/HudUi/Chalkboard/MilestoneHud"]
anchor_right = 1.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Goal"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Hud/HudUi/Chalkboard/MilestoneHud"]
margin_left = 150.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 45 )
custom_fonts/font = ExtResource( 14 )
text = "10"
align = 1
valign = 1
autowrap = true
max_lines_visible = 1
script = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}
fonts = [ ExtResource( 13 ), ExtResource( 3 ), ExtResource( 14 ) ]

[node name="PuzzleMessages" parent="Hud/HudUi" instance=ExtResource( 62 )]

[node name="PuzzleTrace" type="Label" parent="Hud/HudUi"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 40.0
theme = ExtResource( 1 )
text = "abcd"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
puzzle_path = NodePath("../../..")

[node name="ResultsHud" parent="Hud/HudUi" instance=ExtResource( 6 )]

[node name="TutorialHud" parent="Hud/HudUi" instance=ExtResource( 2 )]
visible = false
puzzle_path = NodePath("../../..")

[node name="TouchButtons" parent="Hud" instance=ExtResource( 10 )]

[node name="TopOutTracker" type="Node" parent="."]
script = ExtResource( 30 )

[node name="GameOverVoice0" type="AudioStreamPlayer" parent="TopOutTracker"]
stream = ExtResource( 46 )
bus = "Voice Bus"

[node name="GameOverVoice1" type="AudioStreamPlayer" parent="TopOutTracker"]
stream = ExtResource( 57 )
bus = "Voice Bus"

[node name="GameOverVoice2" type="AudioStreamPlayer" parent="TopOutTracker"]
stream = ExtResource( 48 )
bus = "Voice Bus"

[node name="GameOverVoice3" type="AudioStreamPlayer" parent="TopOutTracker"]
stream = ExtResource( 45 )
bus = "Voice Bus"

[node name="GameOverVoice4" type="AudioStreamPlayer" parent="TopOutTracker"]
stream = ExtResource( 44 )
bus = "Voice Bus"

[node name="StartEndSfx" type="Node" parent="."]
script = ExtResource( 67 )

[node name="ReadySound" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 39 )
volume_db = -8.0
bus = "Sound Bus"

[node name="GoSound" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 38 )
volume_db = -8.0
bus = "Sound Bus"

[node name="GoVoice0" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 53 )
volume_db = -4.0
bus = "Voice Bus"

[node name="GoVoice1" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 54 )
volume_db = -4.0
bus = "Voice Bus"

[node name="GoVoice2" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 55 )
volume_db = -4.0
bus = "Voice Bus"

[node name="ExcellentSound" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 51 )
bus = "Sound Bus"

[node name="MatchEndSound" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 52 )
volume_db = -4.0
bus = "Sound Bus"

[node name="GameOverSound" type="AudioStreamPlayer" parent="StartEndSfx"]
stream = ExtResource( 47 )
bus = "Sound Bus"

[node name="ApplauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sound Bus"

[node name="CheatCodeDetector" parent="." instance=ExtResource( 8 )]
codes = [ "delays" ]

[node name="PuzzleMusicManager" type="Node" parent="."]
script = ExtResource( 19 )
[connection signal="after_piece_written" from="Playfield" to="." method="_on_Playfield_after_piece_written"]
[connection signal="before_line_cleared" from="Playfield" to="StarSeeds" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="Playfield" to="FrostingGlobs" method="_on_Playfield_before_line_cleared"]
[connection signal="blocks_prepared" from="Playfield" to="StarSeeds" method="_on_Playfield_blocks_prepared"]
[connection signal="box_built" from="Playfield" to="StarSeeds" method="_on_Playfield_box_built"]
[connection signal="box_built" from="Playfield" to="FrostingGlobs" method="_on_Playfield_box_built"]
[connection signal="line_cleared" from="Playfield" to="." method="_on_Playfield_line_cleared"]
[connection signal="line_erased" from="Playfield" to="StarSeeds" method="_on_Playfield_line_erased"]
[connection signal="lines_deleted" from="Playfield" to="StarSeeds" method="_on_Playfield_lines_deleted"]
[connection signal="food_spawned" from="StarSeeds" to="FoodItems" method="_on_StarSeeds_food_spawned"]
[connection signal="squish_moved" from="PieceManager" to="FrostingGlobs" method="_on_PieceManager_squish_moved"]
[connection signal="topped_out" from="PieceManager" to="TopOutTracker" method="_on_PieceManager_topped_out"]
[connection signal="hit_next_pieces" from="FrostingGlobs" to="FrostingSfx" method="_on_FrostingGlobs_hit_next_pieces"]
[connection signal="hit_playfield" from="FrostingGlobs" to="Playfield" method="_on_FrostingGlobs_hit_playfield"]
[connection signal="hit_playfield" from="FrostingGlobs" to="FrostingSfx" method="_on_FrostingGlobs_hit_playfield"]
[connection signal="hit_wall" from="FrostingGlobs" to="WallGlobViewports" method="_on_FrostingGlobs_hit_wall"]
[connection signal="hit_wall" from="FrostingGlobs" to="FrostingSfx" method="_on_FrostingGlobs_hit_wall"]
[connection signal="start_button_pressed" from="Hud/HudUi/PuzzleMessages" to="." method="_on_Hud_start_button_pressed"]
[connection signal="cheat_detected" from="CheatCodeDetector" to="Hud/HudUi/PuzzleTrace" method="_on_CheatCodeDetector_cheat_detected"]
